<resources>
    <string name="app_name">Navigation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="card_string">Card</string>
    <string name="weather_string">Weather</string>
    <string name="location_string">Location</string>
    <string name="forecast_string">Forecast</string>
    <string name="subheader">Subheader</string>
    <string name="notification_string">Notification</string>
    <string name="request_string">Request</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hint_string">Location</string>
    <string name="insert_city_name">Please insert city name below</string>
</resources>
