<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/weather"
            android:checked="false"
            android:icon="@drawable/weather_pouring"
            android:title="@string/weather_string" />

        <item
            android:id="@+id/card"
            android:checked="false"
            android:icon="@drawable/ic_picture_in_picture_black_48dp"
            android:title="@string/card_string" />

        <item
            android:id="@+id/location"
            android:checked="false"
            android:icon="@drawable/ic_room_black_48dp"
            android:title="@string/location_string" />

        <item
            android:id="@+id/forecast"
            android:checked="false"
            android:icon="@drawable/weather_pouring"
            android:title="@string/forecast_string" />


        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:icon="@drawable/ic_email_black_48dp"
            android:title="@string/all_mail_string" />
        <item
            android:id="@+id/trash"
            android:checked="false"
            android:icon="@drawable/ic_delete_black_48dp"
            android:title="@string/trash_string" />
        <item
            android:id="@+id/spam"
            android:checked="false"
            android:icon="@drawable/ic_error_black_48dp"
            android:title="@string/spam_string" />

    </group>
</menu>